fix(web.dev): exclude pagespeed.web.dev
Update the document rule to exclude pagespeed.web.dev, which doesn't look too good with our userstyle on.

--- a/styles/web.dev/catppuccin.user.less
+++ b/styles/web.dev/catppuccin.user.less
@@ -17,7 +17,8 @@
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
-@-moz-document domain("web.dev") {
+// Exclude https://pagespeed.web.dev/, which is (currently) poorly themed.
+@-moz-document url-prefix("https://web.dev") {
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
